@@ -38,15 +38,15 @@ public interface IMarkerConstants {
 	public final String MARKER_ANCHORPOINT_SOURCE = "SOURCE"; //$NON-NLS-1$
 	public final String MARKER_ANCHORPOINT_TARGET = "TARGET"; //$NON-NLS-1$
 	
-	public static final Integer CENTER = new Integer(PositionConstants.CENTER);
-	public static final Integer TOP = new Integer(PositionConstants.TOP);
-	public static final Integer BOTTOM = new Integer(PositionConstants.BOTTOM);
-	public static final Integer LEFT = new Integer(PositionConstants.LEFT);
-	public static final Integer RIGHT = new Integer(PositionConstants.RIGHT);
-	public static final Integer TOP_LEFT = new Integer(PositionConstants.TOP | PositionConstants.LEFT);
-	public static final Integer TOP_RIGHT = new Integer(PositionConstants.TOP | PositionConstants.RIGHT);
-	public static final Integer BOTTOM_LEFT = new Integer(PositionConstants.BOTTOM | PositionConstants.LEFT);
-	public static final Integer BOTTOM_RIGHT = new Integer(PositionConstants.BOTTOM | PositionConstants.RIGHT);
+	public static final Integer CENTER = Integer.valueOf( PositionConstants.CENTER);
+	public static final Integer TOP = Integer.valueOf( PositionConstants.TOP);
+	public static final Integer BOTTOM = Integer.valueOf( PositionConstants.BOTTOM);
+	public static final Integer LEFT = Integer.valueOf( PositionConstants.LEFT);
+	public static final Integer RIGHT = Integer.valueOf( PositionConstants.RIGHT);
+	public static final Integer TOP_LEFT = Integer.valueOf( PositionConstants.TOP | PositionConstants.LEFT);
+	public static final Integer TOP_RIGHT = Integer.valueOf( PositionConstants.TOP | PositionConstants.RIGHT);
+	public static final Integer BOTTOM_LEFT = Integer.valueOf( PositionConstants.BOTTOM | PositionConstants.LEFT);
+	public static final Integer BOTTOM_RIGHT = Integer.valueOf( PositionConstants.BOTTOM | PositionConstants.RIGHT);
 	
 	// The following priority values may be used for the 
 	// IModelMarkerConstants.DECORATION_MARKER_PRIORITY_ATTR
